src/objects/fc_csc__Invoice_Item_Adjustment__c.object
<CustomObject>
    <fields>
        <fullName>fc_csc__AdjustmentAmount__c</fullName>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fc_csc__AdjustmentDate__c</fullName>
        <label>Adjustment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fc_csc__AdjustmentType__c</fullName>
        <label>Adjustment Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fc_csc__Invoice_Item__c</fullName>
        <label>Invoice Item</label>
        <referenceTo>fc_csc__Invoice_Item__c</referenceTo>
        <relationshipLabel>Invoice Item Adjustments</relationshipLabel>
        <relationshipName>Invoice_Item_Adjustments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>fc_csc__ReasonCode__c</fullName>
        <label>Reason Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Adjustment</fullName>
                </value>
                <value>
                    <fullName>Customer Satisfaction</fullName>
                </value>
                <value>
                    <fullName>Incorrect Charge</fullName>
                </value>
                <value>
                    <fullName>Write-Off</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Cancellation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fc_csc__ReferenceId__c</fullName>
        <label>Reference Id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__ZInvoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>Zuora__ZInvoice__c</referenceTo>
        <relationshipLabel>Invoice Item Adjustments</relationshipLabel>
        <relationshipName>Invoice_Item_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Invoice Item Adjustment</label>
    <nameField>
        <label>Invoice Item Adjustment Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Item Adjustments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>